Updated character management commands to use updated methods