@@ -3,6 +3,7 @@ package com.reliquary.crow.invokes.commands.dnd;
 import com.reliquary.crow.invokes.slashcommands.dnd.DnD.DnD;
 import com.reliquary.crow.managers.commands.CommandContext;
 import com.reliquary.crow.managers.commands.CommandInterface;
+import com.reliquary.crow.resources.apis.googlesheets.SheetDataFetcher;
 import com.reliquary.crow.resources.dnd.CharacterFetchInfo;
 import com.reliquary.crow.resources.dnd.CharacterManager;
 import com.reliquary.crow.resources.jda.MessageResources;
@@ -17,7 +18,7 @@ import java.util.List;
 /**
  * This class lets the user delete a character from their user profile directory
  *
- * @version 1.2 2022-10-01
+ * @version 1.3 2022-13-01
  * @since 1.1
  */
 public class DeleteCharacter implements CommandInterface {
@@ -68,8 +69,9 @@ public class DeleteCharacter implements CommandInterface {
 			return;
 		}
 
-		CharacterFetchInfo fetchInfo = new CharacterFetchInfo(CharacterManager.getSheetId(userId, characterNum));
-		HashMap<String, String> characterInfo = fetchInfo.batchFetchInfo(List.of(
+		SheetDataFetcher fetchInfo = new SheetDataFetcher(CharacterManager.getSheetId(userId, characterNum),
+			CharacterFetchInfo.getRangeMap(), CharacterFetchInfo.defaultMap());
+		HashMap<String, String> characterMap = fetchInfo.fetchCells(List.of(
 			"name"
 		));
 
@@ -84,7 +86,7 @@ public class DeleteCharacter implements CommandInterface {
 		}
 
 		EmbedBuilder builder = new EmbedBuilder()
-			.setAuthor(characterInfo.get("name") + " has been removed from your profile!", null,
+			.setAuthor(characterMap.get("name") + " has been removed from your profile!", null,
 				ctx.getMember().getUser().getAvatarUrl())
 			.setColor(RandomColor.getRandomColor());
 		StringBuilder descriptionBuilder = builder.getDescriptionBuilder();
@@ -116,17 +118,18 @@ public class DeleteCharacter implements CommandInterface {
 			}
 		} else {
 			if (characterNum == 1) {
-				fetchInfo = new CharacterFetchInfo(CharacterManager.getSheetId(userId, 1));
-				characterInfo = fetchInfo.batchFetchInfo(List.of(
+				fetchInfo = new SheetDataFetcher(CharacterManager.getSheetId(userId, 1),
+					CharacterFetchInfo.getRangeMap(), CharacterFetchInfo.defaultMap());
+				characterMap = fetchInfo.fetchCells(Arrays.asList(
 					"name",
 					"portrait"
 				));
 
 				descriptionBuilder
 					.append("\n\nYour new selected character is ")
-					.append(characterInfo.get("name"));
+					.append(characterMap.get("name"));
 
-				String characterPortrait = characterInfo.get("portrait");
+				String characterPortrait = characterMap.get("portrait");
 
 				if (!characterPortrait.isEmpty()) {
 					builder
